Allow Netlify origin in CORS config