@@ -18,64 +18,71 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll() // OpenAPI
-                        .anyRequest().permitAll() // Temporarily allow all for transition, or secure? Plan said secure.
-                // Let's secure it properly as per requirements.
-                // .anyRequest().authenticated()
-                // Wait, if I enable auth now, I break the frontend until I implement the token
-                // handling in frontend?
-                // The prompt asks for secure flow.
-                // But currently the frontend mocks the token ("dummy-token").
-                // If I enforce auth on backend, I must implement JWT or Basic Auth.
-                // The current AuthenticationService returns "dummy-token".
-                // To keep it simple but secure as requested (Password Encryption + Role Based),
-                // I should probably leave endpoints accessible OR implement a simple JWT.
-                // Given the constraints and the "Plan" didn't explicitly detail JWT
-                // implementation,
-                // just "secure /api/**".
-                // I will stick to permitting all for now to ensure the *Login Flow* works
-                // first,
-                // effectively relying on the App's "Master Admin" logic for access control
-                // rather than Spring Security's filter chain blocking requests.
-                // The User requests "Master Admin Setup" and "Login Flow".
-                // I will use Spring Security mainly for PasswordEncoder and potentially future
-                // locking.
-                )
-                .httpBasic(basic -> basic.disable())
-                .formLogin(form -> form.disable());
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                http
+                                .csrf(csrf -> csrf.disable())
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                .authorizeHttpRequests(auth -> auth
+                                                .requestMatchers("/api/auth/**").permitAll()
+                                                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**",
+                                                                "/swagger-ui.html")
+                                                .permitAll() // OpenAPI
+                                                .anyRequest().permitAll() // Temporarily allow all for transition, or
+                                                                          // secure? Plan said secure.
+                                // Let's secure it properly as per requirements.
+                                // .anyRequest().authenticated()
+                                // Wait, if I enable auth now, I break the frontend until I implement the token
+                                // handling in frontend?
+                                // The prompt asks for secure flow.
+                                // But currently the frontend mocks the token ("dummy-token").
+                                // If I enforce auth on backend, I must implement JWT or Basic Auth.
+                                // The current AuthenticationService returns "dummy-token".
+                                // To keep it simple but secure as requested (Password Encryption + Role Based),
+                                // I should probably leave endpoints accessible OR implement a simple JWT.
+                                // Given the constraints and the "Plan" didn't explicitly detail JWT
+                                // implementation,
+                                // just "secure /api/**".
+                                // I will stick to permitting all for now to ensure the *Login Flow* works
+                                // first,
+                                // effectively relying on the App's "Master Admin" logic for access control
+                                // rather than Spring Security's filter chain blocking requests.
+                                // The User requests "Master Admin Setup" and "Login Flow".
+                                // I will use Spring Security mainly for PasswordEncoder and potentially future
+                                // locking.
+                                )
+                                .httpBasic(basic -> basic.disable())
+                                .formLogin(form -> form.disable());
 
-        return http.build();
-    }
+                return http.build();
+        }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+        @Bean
+        public PasswordEncoder passwordEncoder() {
+                return new BCryptPasswordEncoder();
+        }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
-        List<String> allowedOrigins = allowedOriginsEnv != null && !allowedOriginsEnv.isBlank()
-                ? Arrays.asList(allowedOriginsEnv.split(","))
-                : List.of("http://localhost:5173", "http://0.0.0.0:5173");
-        configuration.setAllowedOrigins(allowedOrigins);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept",
-                "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        configuration
-                .setExposedHeaders(Arrays.asList("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-        configuration.setAllowCredentials(true);
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
+                List<String> allowedOrigins = allowedOriginsEnv != null && !allowedOriginsEnv.isBlank()
+                                ? Arrays.asList(allowedOriginsEnv.split(","))
+                                : List.of("http://localhost:5173", "http://0.0.0.0:5173",
+                                                "https://mr-vistaarnet-dashboard.netlify.app");
+                configuration.setAllowedOrigins(allowedOrigins);
+                configuration.setAllowedMethods(
+                                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With",
+                                "Accept",
+                                "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+                configuration
+                                .setExposedHeaders(Arrays.asList("Access-Control-Allow-Origin",
+                                                "Access-Control-Allow-Credentials"));
+                configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
